Generate QR code using qrcode.js

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head/><head>
     <body>
+        <script src="./qrcode.min.js"></script>
+        <div id="qrcode"></div>
         <script src="./dist/qwopy.js"></script> 
         <script>
             QWOPY.init();
